--- a/pages/project1.html
+++ b/pages/project1.html
@@ -125,12 +125,12 @@
           />
           <img
             src="/img/welcome_to_tech_trends_mobile.avif"
-            srcset="/img/welcome_to_tech_trends_mobile.avif 564w"
+            srcset="/img/welcome_to_tech_trends_mobile.avif 480w"
             sizes="100vw"
-            width="564"
-            height="334"
+            width="387"
+            height="229"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals..."
-            style="object-fit: cover; width: 100%; height: auto; aspect-ratio: 564 / 334"
+            style="object-fit: cover; width: 100%; height: auto;"
             fetchpriority="high"
             decoding="async"
             loading="eager"
@@ -144,7 +144,7 @@
     </header>
     <main class="about-me" id="projects">
       <section id="description">
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>project 1 | the website</h2>
           <h2>tech trends</h2>
         </div>
@@ -180,7 +180,7 @@
         </div>
       </section>
       <section id="the-grade">
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>project 1 | the grade</h2>
         </div>
         <div class="grade-img fancy-border-img" id="grade-img">
@@ -201,9 +201,9 @@
               src="/img/seo-grade-mobile.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
-              width="350"
-              height="302"
-              style="aspect-ratio: 1.16 / 1; object-fit: cover; width: 93%; height: auto; display: block;"
+              width="304"
+              height="262"
+              style="aspect-ratio: 304 / 262; object-fit: cover; width: 93%; height: auto; display: block;"
               loading="lazy"
               fetchpriority="auto"
               decoding="async"
@@ -239,7 +239,7 @@
             </div>
           </div> 
         </div>
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>the grade: desktop</h2>
           <h2><i>page speed insights</i></h2>
         </div>
@@ -260,16 +260,16 @@
             <img 
               src="/img/desktop-grade-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="409"
-              height="344"
-              style="aspect-ratio: 409 / 344; height: auto; object-fit: cover; display: block; width: 96%; "
+              width="314"
+              height="264"
+              style="aspect-ratio: 314 / 264; height: auto; object-fit: cover; display: block; width: 96%; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h3>where we started</h3>
         </div>
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img1">
@@ -289,16 +289,16 @@
             <img 
               src="/img/tech-trends-start-desktop-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="342"
-              height="362"
-              style="aspect-ratio: 342 / 362; width: 93%; height: auto; object-fit: cover; display: block; "
+              width="304"
+              height="322"
+              style="aspect-ratio: 304 / 322; width: 93%; height: auto; object-fit: cover; display: block; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h3>where we finished</h3>
         </div>
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img2">
@@ -318,16 +318,16 @@
             <img 
               src="/img/tech-trends-finish-desktop-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance after optimization"
-              width="342"
-              height="362"
-              style="aspect-ratio: 342 / 362; width: 93%; height: auto; object-fit: cover; display: block;"
+              width="304"
+              height="322"
+              style="aspect-ratio: 304 / 322; width: 93%; height: auto; object-fit: cover; display: block;"
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>the grade: mobile</h2>
           <h2>page speed insights</h2>
         </div>
@@ -348,9 +348,9 @@
             <img 
               src="/img/mobile-grade-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="405"
-              height="344"
-              style="aspect-ratio: 405 / 344; width: 96%; height: auto; object-fit: cover; display: block; "
+              width="314"
+              height="266"
+              style="aspect-ratio: 314 / 266; width: 96%; height: auto; object-fit: cover; display: block; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
@@ -377,11 +377,11 @@
             <img 
               src="/img/tech-trends-start-mobile-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="356"
-              height="362"
+              width="304"
+              height="309"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover; aspect-ratio: 356 / 362; width: 93%; height: auto;"
+              style="object-fit: cover; aspect-ratio: 304 / 309; width: 93%; height: auto;"
               decoding="async"
             />
           </picture>
@@ -389,7 +389,7 @@
         <div class="resume-date fancy-border" id="project-title">  
           <h3>where we finished</h3>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img3">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img4">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
@@ -406,16 +406,16 @@
             <img 
               src="/img/tech-trends-finish-mobile-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="356"
-              height="378"
-              style="aspect-ratio: 356 / 378; width: 93%; height: auto; object-fit: cover; display: block;"
+              width="304"
+              height="323"
+              style="aspect-ratio: 304 / 323; width: 93%; height: auto; object-fit: cover; display: block;"
               loading="lazy"
               fetchpriority="auto"
               decoding="async"
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>the grade:</h2>
           <h2>hubspot</h2>
         </div>
@@ -436,18 +436,18 @@
             <img 
               src="/img/hubspot-grade-mobile.avif"
               alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
-              width="338"
-              height="482"
+              width="304"
+              height="434"
               loading="lazy"
                 fetchpriority="auto"
-              style="object-fit: cover; aspect-ratio: 338 / 482; width: 93%; height: auto;"
+              style="object-fit: cover; aspect-ratio: 304 / 434; width: 93%; height: auto;"
               decoding="async"
             />
           </picture>
         </div>
       </section>
       <section id="cta-section" id="section4">
-        <div class="author-bio fancy-border-img" id="author-bio">
+        <div class="author-bio-container fancy-border-img" id="author-cta">
           <picture> 
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
@@ -464,11 +464,11 @@
             <img 
               src="/img/allisonstock-black-logo-mobile.avif"
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="376"
-              height="164"
+              width="296"
+              height="129"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 376 / 164; width: 100%; height: auto;"
+              style="object-fit: cover;aspect-ratio: 296 / 129; width: 100%; height: auto;"
               decoding="async" 
             />
           </picture> 
@@ -490,14 +490,14 @@
         </div>
       </section>
       <section id="the-design">
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>project 1 | the design</h2>
           <h2>inspiration meets innovation</h2>
         </div>
         <div class="mood-baord fancy-border-img" id="mood-baord">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742918096/websit  e-design-tech-trends_xbwosg.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742918096/website-design-tech-trends_xbwosg.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -511,11 +511,11 @@
             <img 
               src="/img/website-design-tech-trends-mobile.avif"
               alt="Website design concept for Tech Trends Blog, featuring a blend of modern and futuristic design elements that reflect the blog's focus on cutting-edge technology."
-              width="364"
-              height="305"
+              width="272"
+              height="228"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 364 / 305; width: 93%; height: auto;"
+              style="object-fit: cover;aspect-ratio: 272 / 228; width: 93%; height: auto;"
               decoding="async"     
               />
           </picture>
@@ -534,7 +534,7 @@
             </div>
           </div> 
         </div>
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>project 1 | the design</h2>
           <h2>past meets future</h2>
         </div>
@@ -555,11 +555,11 @@
             <img 
               src="/img/past-meets-future-mobile.avif"
               alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
-              width="350"
-              height="409"
+              width="272"
+              height="318"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 350 / 409; width: 93%; height: auto;"
+              style="object-fit: cover;aspect-ratio: 272 / 318; width: 93%; height: auto;"
               decoding="async" 
               />
           </picture>
@@ -577,7 +577,7 @@
             </div>
           </div> 
         </div>
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>project 1 | the frame</h2>
         </div>
         <div class="wireframe-img fancy-border-img" id="wireframe-img1">  
@@ -598,11 +598,11 @@
               src="/img/homepage-wireframe-tech-trends-mobile.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
               object-fit="cover"
-              width="370"
-              height="1225"
+              width="272"
+              height="924"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover; aspect-ratio: 370 / 1255; width: 93%; height: auto;"
+              style="object-fit: cover; aspect-ratio: 272 / 924; width: 93%; height: auto;"
               decoding="async" 
             />
           </picture>
@@ -625,11 +625,11 @@
               src="/img/category-wireframe-tech-trends-mobile.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
               object-fit="cover"
-              width="337"
-              height="609"
+              width="272"
+              height="492"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 337 / 609; width: 93%; height: auto;"
+              style="object-fit: cover;aspect-ratio: 272 / 492; width: 93%; height: auto;"
               decoding="sync"   
             />
           </picture>
@@ -652,11 +652,11 @@
               src="/img/article-wireframe-tech-trends-mobile.avif"
               alt="Wireframe of the article page layout for Tech Trends Blog"
               object-fit="cover"
-              width="337"
-              height="1146"
+              width="272"
+              height="627"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 337 / 1146;width: 93%; height: auto;"
+              style="object-fit: cover;aspect-ratio: 272 / 627;width: 93%; height: auto;"
               decoding="async" 
             />
           </picture>
@@ -676,7 +676,7 @@
         </div>
       </section>
       <section id="casestudy">
-        <div class="resume-date fancy-border" id="project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>Project 3 | The Case Study</h2>
         </div>
         <div class="cute-robot fancy-border-img" id="cute-robot"> 
@@ -697,11 +697,11 @@
               src="/img/tech-trends-welcome-cute-robot-mobile.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
               object-fit="cover"
-              width="377"
-              height="243"
+              width="296"
+              height="190"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 377 / 243; width: 100%; height: auto;"
+              style="object-fit: cover;aspect-ratio: 296 / 190; width: 100%; height: auto;"
               decoding="async"
             />
           </picture> 
@@ -823,7 +823,7 @@
         </article>
       </section>
       <section id="contact">
-        <div class="author-bio fancy-border-img" id="author-bio">
+        <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
