--- a/pages/project1.html
+++ b/pages/project1.html
@@ -270,7 +270,7 @@
           </picture>
         </div>
         <div class="resume-date fancy-border project-title">
-          <h3>where we started</h3>
+          <h2>where we started</h2>
         </div>
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img1">
           <picture>
@@ -301,6 +301,7 @@
         <div class="resume-date fancy-border project-title">
           <h3>where we finished</h3>
         </div>
+
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img2">
           <picture>
             <source
@@ -357,8 +358,8 @@
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border" id="project-title">
-          <h3>where we started</h3>
+        <div class="resume-date fancy-border project-title">
+          <h2>where we started</h2>
         </div>
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img3">
           <picture>
@@ -386,8 +387,8 @@
             />
           </picture>
         </div>
-        <div class="resume-date fancy-border" id="project-title">  
-          <h3>where we finished</h3>
+       <div class="resume-date fancy-border project-title">
+          <h2>where we finished</h2>
         </div>
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img4">
           <picture>
