--- a/pages/project1.html
+++ b/pages/project1.html
@@ -103,7 +103,7 @@
       }
     </script>
   </head>
-  <body>
+  <body class="fonts-loading">
     <header>
       <section>
         <div id="nav"></div>
@@ -387,7 +387,7 @@
             />
           </picture>
         </div>
-       <div class="resume-date fancy-border project-title">
+        <div class="resume-date fancy-border project-title">
           <h2>where we finished</h2>
         </div>
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img4">
