--- a/pages/project1.html
+++ b/pages/project1.html
@@ -16,8 +16,17 @@
       media="(min-width: 941px)"
       fetchpriority="high"
     />
+    <!-- Desktop (≥ 941px) -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+      type="image/avif"
+      media="(min-width: 941px)"
+      fetchpriority="high"
+    />
 
-    <!-- Tablet Hero Image Preload (681px–940px) -->
+    <!-- Tablet (681px–940px) -->
     <link
       rel="preload"
       as="image"
@@ -26,15 +35,15 @@
       media="(min-width: 681px) and (max-width: 940px)"
     />
 
-    <!-- Mobile Hero Image Preload (< 681px) -->
+    <!-- Mobile (≤ 680px) -->
     <link
       rel="preload"
       as="image"
       href="/img/welcome_to_tech_trends_mobile.avif"
       type="image/avif"
       media="(max-width: 680px)"
+      fetchpriority="high"
     />
-
 
     <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -186,7 +195,7 @@
         <div class="grade-img fancy-border-img" id="grade-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_616,h_532,dpr_auto,c_fill,g_auto/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -201,9 +210,9 @@
               src="/img/seo-grade-mobile.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
-              width="293"
-              height="253"
-              style="aspect-ratio: 293 / 253; object-fit: cover; width: 90%; height: auto; display: block;"
+              width="303"
+              height="262"
+              style="aspect-ratio: 303 / 262; object-fit: cover; width: 93%; height: auto; display: block;"
               loading="lazy"
               fetchpriority="auto"
               decoding="async"
@@ -246,7 +255,7 @@
         <div class="grade-table fancy-border-img" id="grade-table-img1">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747614027/desktop-grades_kretmv.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_616,h_518,dpr_auto,c_fill,g_auto/v1747614027/desktop-grades_kretmv.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -260,9 +269,9 @@
             <img 
               src="/img/desktop-grade-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="314"
-              height="264"
-              style="aspect-ratio: 314 / 264; height: auto; object-fit: cover; display: block; width: 96%; "
+              width="303"
+              height="255"
+              style="aspect-ratio: 303 / 255; height: auto; object-fit: cover; display: block; width: 93%; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
@@ -275,7 +284,7 @@
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img1">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742916681/tech-trends-start-desktop_cbbbqf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_617,h_627,dpr_auto,c_fill,g_auto/v1742916681/tech-trends-start-desktop_cbbbqf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -305,7 +314,7 @@
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img2">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742916681/tech-trends-finish-desktop_dctwrz.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_617,h_653,dpr_auto,c_fill,g_auto/v1742916681/tech-trends-finish-desktop_dctwrz.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -335,7 +344,7 @@
         <div class="grade-table fancy-border-img" id="grade-table-img2">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747614027/mobile-grades_upcfff.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_636,h_538,dpr_auto,c_fill,g_auto/v1747614027/mobile-grades_upcfff.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -349,9 +358,9 @@
             <img 
               src="/img/mobile-grade-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="314"
-              height="266"
-              style="aspect-ratio: 314 / 266; width: 96%; height: auto; object-fit: cover; display: block; "
+              width="313"
+              height="265"
+              style="aspect-ratio: 313 / 265; width: 96%; height: auto; object-fit: cover; display: block; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
@@ -364,7 +373,7 @@
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img3">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742916681/tech-trends-start-mobile_beu2ct.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_617,h_655,dpr_auto,c_fill,g_auto/v1742916681/tech-trends-start-mobile_beu2ct.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -393,7 +402,7 @@
         <div class="pagespeed-container fancy-border-img" id="pagespeed-grade-img4">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_617,h_655,dpr_auto,c_fill,g_auto/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -423,7 +432,7 @@
         <div class="hubspot fancy-border-img" id="hubspot">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1732986926/hubspot-grade_hnuolf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_617,h_881,dpr_auto,c_fill,g_auto/v1732986926/hubspot-grade_hnuolf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -451,7 +460,7 @@
         <div class="author-bio-container fancy-border-img" id="author-cta">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_632,h_275,dpr_auto,c_fill,g_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -498,7 +507,7 @@
         <div class="mood-baord fancy-border-img" id="mood-baord">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742918096/website-design-tech-trends_xbwosg.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_585,h_490,dpr_auto,c_fill,g_auto/v1742918096/website-design-tech-trends_xbwosg.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -542,7 +551,7 @@
         <div class="past-meets-future fancy-border-img" id="past-meets-future-img">          
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747144506/past-meets-future_pmafy7.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_632,h_407,dpr_auto,c_fill,g_auto/v1747144506/past-meets-future_pmafy7.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -584,7 +593,7 @@
         <div class="wireframe-img fancy-border-img" id="wireframe-img1">  
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_585,h_1985,dpr_auto,c_fill,g_auto/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -611,7 +620,7 @@
         <div class="wireframe-img fancy-border-img" id="wireframe-img2">  
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_585,h_1057,dpr_auto,c_fill,g_auto/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -638,7 +647,7 @@
         <div class="wireframe-img fancy-border-img" id="wireframe-img3">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_585,h_1990,dpr_auto,c_fill,g_auto/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -683,7 +692,7 @@
         <div class="cute-robot fancy-border-img" id="cute-robot"> 
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_730,h_548,dpr_auto,c_fill,g_auto/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -827,7 +836,7 @@
         <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_632,h_275,dpr_auto,c_fill,g_auto/v1746550616/allisonstock-black-logo_yalqqx.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
