updated aspect ratio for canvas-skills-grid

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -112,7 +112,7 @@
       }
     </script>
   </head>
-  <body class="fonts-loading">
+  <body>
     <header>
       <section>
         <div id="nav"></div>
@@ -151,7 +151,7 @@
         </div>
       </div>
     </header>
-    <main class="about-me" id="projects">
+    <main class="about-me fonts-loading" id="projects">
       <section id="description">
         <div class="resume-date fancy-border project-title">
           <h2>project 1 | the website</h2>
