--- a/pages/project1.html
+++ b/pages/project1.html
@@ -112,7 +112,7 @@
       }
     </script>
   </head>
-  <body>
+  <body class="fonts-loading">
     <header>
       <section>
         <div id="nav"></div>
@@ -120,7 +120,7 @@
       <div class="canvas-skills-grid">
         <picture>
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
             type="image/avif"
             media="(min-width: 941px)"
             sizes="(min-width: 941px) 40vw, 100vw"
@@ -136,8 +136,8 @@
             src="/img/welcome_to_tech_trends_mobile.avif"
             srcset="/img/welcome_to_tech_trends_mobile.avif 480w"
             sizes="100vw"
-            width="387"
-            height="229"
+            width="480"
+            height="352"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals..."
             style="object-fit: cover; width: 100%; height: auto;"
             fetchpriority="high"
@@ -151,7 +151,7 @@
         </div>
       </div>
     </header>
-    <main class="about-me fonts-loading" id="projects">
+    <main class="about-me" id="projects">
       <section id="description">
         <div class="resume-date fancy-border project-title">
           <h2>project 1 | the website</h2>
