--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,20 +7,10 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <!-- Desktop Hero Image Preload (≥ 941px) -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
-      type="image/avif"
-      media="(min-width: 941px)"
-      fetchpriority="high"
-    />
-    <!-- Desktop (≥ 941px) -->
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -35,7 +25,6 @@
       media="(min-width: 681px) and (max-width: 940px)"
     />
 
-    <!-- Mobile (≤ 680px) -->
     <link
       rel="preload"
       as="image"
