updated preload links, removed aspect ratio and added background color to each image, added preconnect for cloudinary in the head

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,11 +7,15 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+
     <link
       rel="preload"
       as="image"
       href="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
       type="image/avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif 585w"
+      imagesizes="(min-width: 941px) 40vw"
       media="(min-width: 941px)"
       fetchpriority="high"
     />
@@ -22,7 +26,10 @@
       as="image"
       href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif 768w"
+      imagesizes="100vw"
       media="(min-width: 681px) and (max-width: 940px)"
+      fetchpriority="high"
     />
 
     <link
@@ -30,6 +37,8 @@
       as="image"
       href="/img/welcome_to_tech_trends_mobile.avif"
       type="image/avif"
+      imagesrcset="/img/welcome_to_tech_trends_mobile.avif 480w"
+      imagesizes="100vw"
       media="(max-width: 680px)"
       fetchpriority="high"
     />
