--- a/pages/project1.html
+++ b/pages/project1.html
@@ -35,6 +35,17 @@
     <link
       rel="preload"
       as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      type="image/avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif 768w"
+      imagesizes="100vw"
+      media="(min-width: 481px) and (max-width: 680px)"
+      fetchpriority="high"
+    />
+
+    <link
+      rel="preload"
+      as="image"
       href="/img/welcome_to_tech_trends_mobile.avif"
       type="image/avif"
       imagesrcset="/img/welcome_to_tech_trends_mobile.avif 480w"
@@ -128,6 +139,12 @@
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             type="image/avif"
             media="(min-width: 681px) and (max-width: 940px)"
+            sizes="100vw"
+          />
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_615,h_415,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            type="image/avif"
+            media="(min-width: 481px) and (max-width: 680px)"
             sizes="100vw"
           />
           <img
