--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,13 +9,12 @@
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
+    <!-- Desktop (≥ 941px) -->
     <link
       rel="preload"
       as="image"
       href="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
       type="image/avif"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif 585w"
-      imagesizes="(min-width: 941px) 40vw"
       media="(min-width: 941px)"
       fetchpriority="high"
     />
@@ -26,31 +25,25 @@
       as="image"
       href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif 768w"
-      imagesizes="100vw"
       media="(min-width: 681px) and (max-width: 940px)"
-      fetchpriority="high"
     />
 
+    <!-- Mobile mid-range (481px–680px) -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="/img/welcome_to_tech_trends_midmobile.avif"
       type="image/avif"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif 768w"
-      imagesizes="100vw"
       media="(min-width: 481px) and (max-width: 680px)"
-      fetchpriority="high"
     />
 
+    <!-- Mobile default (≤ 480px) -->
     <link
       rel="preload"
       as="image"
       href="/img/welcome_to_tech_trends_mobile.avif"
       type="image/avif"
-      imagesrcset="/img/welcome_to_tech_trends_mobile.avif 480w"
-      imagesizes="100vw"
-      media="(max-width: 680px)"
+      media="(max-width: 480px)"
       fetchpriority="high"
     />
 
@@ -128,6 +121,7 @@
       </section> 
       <div class="canvas-skills-grid">
         <picture>
+          <!-- Desktop (≥ 941px) -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
             type="image/avif"
@@ -135,18 +129,24 @@
             sizes="(min-width: 941px) 40vw, 100vw"
             fetchpriority="high"
           />
+          
+          <!-- Tablet (681px–940px) -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             type="image/avif"
             media="(min-width: 681px) and (max-width: 940px)"
             sizes="100vw"
           />
+          
+          <!-- Mobile mid (481px–680px) — ideally a separate file, not tablet -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_615,h_415,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="/img/welcome_to_tech_trends_midmobile.avif 615w"
             type="image/avif"
             media="(min-width: 481px) and (max-width: 680px)"
             sizes="100vw"
           />
+
+          <!-- Mobile default (≤ 480px) -->
           <img
             src="/img/welcome_to_tech_trends_mobile.avif"
             srcset="/img/welcome_to_tech_trends_mobile.avif 480w"
@@ -160,11 +160,13 @@
             loading="eager"
           />
         </picture>
+
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
           <h2>showcasing the craft</h2>
         </div>
       </div>
+
     </header>
     <main class="about-me" id="projects">
       <section id="description">
