--- a/pages/project1.html
+++ b/pages/project1.html
@@ -139,7 +139,7 @@
           
           <!-- Mobile mid (481px–680px) — ideally a separate file, not tablet -->
           <source
-            srcset="/img/welcome_to_tech_trends_midmobile.avif 615w"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_615,h_415,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif 615w"
             type="image/avif"
             media="(min-width: 481px) and (max-width: 680px)"
             sizes="100vw"
@@ -159,7 +159,6 @@
             loading="eager"
           />
         </picture>
-
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
           <h2>showcasing the craft</h2>
