removed all aspect ratios and added min-height in its place

--- a/assets/nav.html
+++ b/assets/nav.html
@@ -32,7 +32,7 @@
               height="105"
               loading="eager"
               fetchpriority="high"
-              style="object-fit: cover;"
+              style="aspect-ratio: 240 /105; object-fit: contain; width: 100%; height: auto;"
               decoding="async"
             />
           </a>
