add min-heights to media queries

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -115,17 +115,15 @@
   </head>
   <body class="fonts-loading">
     <header>
-      <section>
-        <div id="nav"></div>
-      </section> 
+      <div id="nav"></div>
       <div class="canvas-skills-grid">
         <picture>
           <!-- Desktop (≥ 941px) -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_547,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
             type="image/avif"
             media="(min-width: 941px)"
-            sizes="(min-width: 941px) 40vw, 100vw"
+            sizes="(min-width: 941px) 30vw, 100vw"
             fetchpriority="high"
           />
           
@@ -188,8 +186,6 @@
           <p>
             Hosted on <strong>Netlify</strong>, Tech Trends Blog stands as a testament to the integration of <strong>AI content creation</strong> and modern <strong>web development</strong>, blending creativity, functionality, and technology to engage and inform technology enthusiasts.
           </p>
-        </article>
-        <div class="project-links">
           <div class="takeme-text">
             <h3>take me to the</h3>
           </div>
@@ -201,7 +197,7 @@
               <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
             </div>
           </div> 
-        </div>
+        </article>
       </section>
       <section id="the-grade">
         <div class="resume-date fancy-border project-title">
@@ -227,7 +223,7 @@
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
               width="303"
               height="262"
-              style="aspect-ratio: 303 / 262; object-fit: cover; width: 93%; height: auto; display: block;"
+              style="object-fit: cover; width: 90%; height: auto; display: block;"
               loading="lazy"
               fetchpriority="auto"
               decoding="async"
@@ -286,7 +282,7 @@
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="303"
               height="255"
-              style="aspect-ratio: 303 / 255; height: auto; object-fit: cover; display: block; width: 93%; "
+              style="height: auto; object-fit: cover; display: block; width: 90%; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
@@ -315,7 +311,7 @@
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="304"
               height="322"
-              style="aspect-ratio: 304 / 322; width: 93%; height: auto; object-fit: cover; display: block; "
+              style="width: 90%; height: auto; object-fit: cover; display: block; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
@@ -345,7 +341,7 @@
               alt="Tech Trends Blog SEO grade result showing performance after optimization"
               width="304"
               height="322"
-              style="aspect-ratio: 304 / 322; width: 93%; height: auto; object-fit: cover; display: block;"
+              style="width: 90%; height: auto; object-fit: cover; display: block;"
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
@@ -375,7 +371,7 @@
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="313"
               height="265"
-              style="aspect-ratio: 313 / 265; width: 96%; height: auto; object-fit: cover; display: block; "
+              style="width: 90%; height: auto; object-fit: cover; display: block; "
               loading="lazy"
             fetchpriority="auto"
               decoding="async"
@@ -406,7 +402,7 @@
               height="309"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover; aspect-ratio: 304 / 309; width: 93%; height: auto;"
+              style="object-fit: cover; width: 90%; height: auto;"
               decoding="async"
             />
           </picture>
@@ -433,7 +429,7 @@
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="304"
               height="323"
-              style="aspect-ratio: 304 / 323; width: 93%; height: auto; object-fit: cover; display: block;"
+              style="width: 90%; height: auto; object-fit: cover; display: block;"
               loading="lazy"
               fetchpriority="auto"
               decoding="async"
@@ -465,7 +461,7 @@
               height="434"
               loading="lazy"
                 fetchpriority="auto"
-              style="object-fit: cover; aspect-ratio: 304 / 434; width: 93%; height: auto;"
+              style="object-fit: cover; width: 90%; height: auto;"
               decoding="async"
             />
           </picture>
@@ -493,7 +489,7 @@
               height="129"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 296 / 129; width: 100%; height: auto;"
+              style="object-fit: cover; width: 100%; height: auto;"
               decoding="async" 
             />
           </picture> 
@@ -540,7 +536,7 @@
               height="228"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 272 / 228; width: 93%; height: auto;"
+              style="object-fit: cover; width: 90%; height: auto;"
               decoding="async"     
               />
           </picture>
@@ -584,7 +580,7 @@
               height="318"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 272 / 318; width: 93%; height: auto;"
+              style="object-fit: cover; width: 90%; height: auto;"
               decoding="async" 
               />
           </picture>
@@ -627,7 +623,7 @@
               height="1076"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover; aspect-ratio: 316 / 1076; width: 100%; height: auto;"
+              style="object-fit: cover; width: 100%; height: auto;"
               decoding="async" 
             />
           </picture>
@@ -654,7 +650,7 @@
               height="1137"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 316 / 1137; width: 100%; height: auto;"
+              style="object-fit: cover; width: 100%; height: auto;"
               decoding="sync"   
             />
           </picture>
@@ -681,7 +677,7 @@
               height="729"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 316 / 729;width: 100%; height: auto;"
+              style="object-fit: cover; width: 100%; height: auto;"
               decoding="async" 
             />
           </picture>
@@ -726,7 +722,7 @@
               height="190"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 296 / 190; width: 100%; height: auto;"
+              style="object-fit: cover; width: 100%; height: auto;"
               decoding="async"
             />
           </picture> 
@@ -869,7 +865,7 @@
               height="164"
               loading="lazy"
               fetchpriority="auto"
-              style="object-fit: cover;aspect-ratio: 376 / 164; width: 100%; height: auto;"
+              style="object-fit: cover; width: 100%; height: auto;"
               decoding="async" 
             />
           </picture> 
