added min-height to images for all breakpoints

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -598,7 +598,7 @@
             </div>
           </div> 
         </div>
-        <div class="resume-date fancy-border project-title">
+        <div class="resume-date fancy-border project-title" id="wireframe">
           <h2>project 1 | the frame</h2>
         </div>
         <div class="wireframe-img fancy-border-img" id="wireframe-img1">  
