changed local path to cloudinary and updated preload links

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,7 +13,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_585,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_547,h_320,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -41,7 +41,8 @@
     <link
       rel="preload"
       as="image"
-      href="/img/welcome_to_tech_trends_mobile.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_448,h_328,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      srcset="/img/welcome_to_tech_trends_mobile.avif"
       type="image/avif"
       media="(max-width: 480px)"
     />
@@ -129,7 +130,7 @@
           
           <!-- Tablet (681px–940px) -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_908,h_510,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             type="image/avif"
             media="(min-width: 681px) and (max-width: 940px)"
             sizes="100vw"
@@ -145,8 +146,8 @@
 
           <!-- Mobile default (≤ 480px) -->
           <img
-            src="/img/welcome_to_tech_trends_mobile.avif"
-            srcset="/img/welcome_to_tech_trends_mobile.avif 480w"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/w_448,h_328,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+            srcset="/img/welcome_to_tech_trends_mobile.avif"
             sizes="100vw"
             width="480"
             height="352"
